--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ django = "^5.2.4"
 djangorestframework = "^3.16.0"
 psycopg2-binary = "^2.9.10"
 python-dotenv = "^1.1.1"
+pillow = "^11.3.0"
+markdown = "^3.8.2"
+django-filter = "^25.1"
+black = "^25.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
